# demes-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: miri.yml  msrv.yml  semver.yml  test_doc.yml  test_ffi.yml  tests.yml  valgrind.yaml
demes/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
demes-derive/: Cargo.toml
demes-derive/src/: lib.rs
demes-ffi/: CHANGELOG.md  Cargo.toml  cbindgen.toml
demes-ffi/c_example/: CMakeLists.txt  example.c  example_using_iterators.c
demes-ffi/src/: iterators.rs  lib.rs
demes-ffi/tests/: test_iterators.rs
demes-forward/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
demes-forward-capi/: CHANGELOG.md  Cargo.toml  README.md
demes-forward-capi/c_example/: CMakeLists.txt  example.c
demes-forward-capi/example_yaml/: one_deme_two_epochs.yaml  simple_split_model.yaml
demes-forward-capi/src/: lib.rs
demes-forward-capi/tests/: test_error_cases.rs
demes-forward/examples/: iterate_gutenkunst.rs
demes-forward/src/: current_size.rs  error.rs  graph.rs  lib.rs  square_matrix.rs  test_functions.rs  time.rs
demes-forward/src/iterators/: deme_size_history.rs  mod.rs  state_iterator.rs
demes-forward/tests/: tests.rs
demes/c_example/: CMakeLists.txt  README.md  example.c  example_using_iterators.c
demes/examples/: iterate_graph.rs  iterate_graph_detail.rs  jouganous_model.rs
demes/src/: builder.rs  cloning_rate.rs  deme_size.rs  error.rs  ffi.rs  ffi_iterators.rs  graph_operations.rs  lib.rs  macros.rs  migration_rate.rs  process_json.rs  proportion.rs  selfing_rate.rs  specification.rs  time.rs
demes/src/graph_operations/: mod.rs  slice.rs  splice.rs
demes/tests/: examples.rs  invalid_test_template  test_arithmetics.rs  test_bad_yaml_inputs.rs  test_builder.rs  test_cases_from_spec.rs  test_graph.rs  test_non_integer_deme_sizes.rs  valid_test_template
examples/: jouganous.yaml  jouganous_model.rs
src/: builder.rs  deme_size.rs  error.rs  lib.rs  macros.rs  migration_rate.rs  proportion.rs  specification.rs  time.rs  traits.rs  types.rs
tests/: test_bad_yaml_inputs.rs  test_builder.rs  test_cases_from_spec.rs  test_graph.rs
