[package]
name = "demes"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "rust implementation of demes specification"
homepage = "https://github.com/molpopgen/demes-rs"
repository = "https://github.com/molpopgen/demes-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "~0.10"
thiserror = "~1"
serde = { version = "~1", features = ["derive", "rc"] }
serde_yaml = "~0.8"
regex = "~1"

[dev-dependencies]
serde_json = "1.0.81"
glob = "0.3.0"
