[package]
name = "demes"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "rust implementation of demes specification"
homepage = "https://github.com/molpopgen/demes-rs"
repository = "https://github.com/molpopgen/demes-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
itertools = "~0.10"
thiserror = "~1"
serde = { version = "~1", features = ["derive", "rc"] }
serde_yaml = "~0.9"

[dependencies.regex]
version = "~1"
default-features = false
# BIG reduction in final library size
features = ["std", "unicode-perl"]

[dev-dependencies]
serde_json = "1.0.81"
glob = "0.3.0"
