[package]
name = "demes"
version = "0.4.0-alpha.2"
edition = "2021"
license = "MIT"
description = "rust implementation of demes specification"
homepage = "https://github.com/molpopgen/demes-rs"
repository = "https://github.com/molpopgen/demes-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
json = ["serde_json"]

[dependencies]
thiserror = "~1"
serde = { version = "~1", features = ["derive", "rc"] }
serde_yaml = "~0.9"
serde_json = {version = "1.0.67", optional = true, features=["float_roundtrip"]}

[dependencies.regex]
version = "~1"
default-features = false
# BIG reduction in final library size
features = ["std", "unicode-perl"]

[dev-dependencies]
glob = "0.3.0"
anyhow = "~1"

[[example]]
name = "jouganous_model"
