[package]
name = "demes-forward-capi"
version = "0.5.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/molpopgen/demes-rs"
repository = "https://github.com/molpopgen/demes-rs"
description = "C API to demes-forward crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]

# [profile.release]
# lto = "fat"
# codegen-units=1
# panic = "abort"
# strip = true

[dependencies]
demes-forward = {version = "0.5.0", path = "../demes-forward"}
libc = "~0.2"
