[package]
name = "demes-forward"
authors = ["Kevin R. Thornton"]
description = "rust API for iterating demes models forwards in time"
version = "0.2.2-alpha.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/molpopgen/demes-forward-rs"
repository = "https://github.com/molpopgen/demes-forward-rs"
rust-version = "1.58.1"

[dependencies]
demes = { version =  "0.4.0-alpha.3", path = "../demes" }
ndarray = "0.15.4"
thiserror = "~1"

[dev-dependencies]
anyhow = "~1"

[[example]]
name = "iterate_gutenkunst"
