[package]
name = "demes-forward"
authors = ["Kevin R. Thornton"]
description = "rust API for iterating demes models forwards in time"
version = "0.5.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/molpopgen/demes-rs"
repository = "https://github.com/molpopgen/demes-rs"
rust-version = "1.60.0"

[dependencies]
demes = { version = "0.6.1", path = "../demes" }
thiserror = "~1"

[dev-dependencies]
anyhow = "~1"

[[example]]
name = "iterate_gutenkunst"
