[package]
name = "demes"
build = "build.rs"
version = "0.7.0-alpha.0"
edition = "2021"
license = "MIT"
description = "rust implementation of demes specification"
homepage = "https://github.com/molpopgen/demes-rs"
repository = "https://github.com/molpopgen/demes-rs"
rust-version = "1.66.1"

[lints.rust]
# Added for rust 1.80.0
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
json = ["serde_json"]

[dependencies]
serde = { version = "~1", features = ["derive", "rc"] }
serde_yaml = "~0.9"
serde_json = {version = "1.0.114", optional = true, features=["float_roundtrip"]}
toml = {version = "0.7.3", optional = true}

[dependencies.regex]
version = "~1"
default-features = false
# BIG reduction in final library size
features = ["std", "unicode-perl"]

[[example]]
name = "iterate_graph_detail"

[[example]]
name = "iterate_graph"
